compiler/tools/fpp-check/test/param/duplicate_save_opcode_explicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_save_opcode_explicit.fpp: 5.3
  async command C opcode 0x10
  ^
error: duplicate opcode value (16 dec, 10 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_save_opcode_explicit.fpp: 3.3
  param P1: U32 save opcode 0x10
  ^
